--- a/SMiP/nbproject/private/private.properties
+++ b/SMiP/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Grzesiek\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\Tomek\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
