--- a/SMiP/nbproject/project.properties
+++ b/SMiP/nbproject/project.properties
@@ -66,7 +66,8 @@ javac.classpath=\
     ${file.reference.jung-visualization-2.0.1.jar}:\
     ${file.reference.stax-api-1.0.1.jar}:\
     ${file.reference.vecmath-1.3.1.jar}:\
-    ${file.reference.wstx-asl-3.2.6.jar}
+    ${file.reference.wstx-asl-3.2.6.jar}:\
+    ${libs.swing-layout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
